@@ -1,7 +1,7 @@
 package cs3500.music.controller;
 
-import cs3500.music.model.SongRep;
-import cs3500.music.view.ConsoleView;
+import cs3500.music.otherView.ConsoleViewImpl;
+import cs3500.music.model.Model;
 
 import java.util.Objects;
 
@@ -9,15 +9,17 @@ import java.util.Objects;
  * Controller for a console view
  * */
 public class ConsoleController implements IController {
-    private ConsoleView view;
+    private ConsoleViewImpl view;
+    private Model model;
 
-    public ConsoleController(SongRep model) {
+    public ConsoleController(Model model) {
         Objects.requireNonNull(model);
-        view = new ConsoleView(model);
+        this.model = model;
+        view = new ConsoleViewImpl();
     }
 
     @Override
     public void run() {
-        view.run();
+        view.display(model);
     }
 }
