@@ -6,52 +6,65 @@ import java.util.List;
 /**
  * Adapts GenericSong to Model
  */
-public class ModelAdapter extends GenericSong implements Model {
+public class ModelAdapter implements Model {
+    private SongRep song;
+
     /** Public default constructor */
-    public ModelAdapter() {
-        super();
+    public ModelAdapter(SongRep song) {
+        this.song = song;
+    }
+
+    @Override
+    public int getTempo() {
+        return song.getTempo();
     }
 
     @Override
     public int getMaxBeats() {
-        return super.getLength();
+        return song.getLength();
     }
 
     @Override
     public int getHighestPitch() {
-        ArrayList<String> range = super.getRange();
-        String highest = range.get(range.size() - 1);
-        return 0;
+        return new Note(song.getHighestNote()).pitchInInt();
     }
 
     @Override
     public int getLowestPitch() {
-        return 0;
+        return new Note(song.getLowestNote()).pitchInInt();
     }
 
     @Override
     public boolean containsKey(int b) {
-        return false;
+        return song.getNotesStartingAtT(b).size() > 0;
     }
 
     @Override
     public List<Note> getNotesAtBeat(int b) {
-        return null;
-    }
+        List<NoteRep> noteIn = song.getNotesStartingAtT(b);
+        List<Note> noteOut = new ArrayList<>();
 
-    @Override
-    public String display() {
-        return null;
+        for (NoteRep n : noteIn) {
+            noteOut.add(new Note(n));
+        }
+
+        return noteOut;
     }
 
     @Override
     public List<Note> getAllNotes() {
-        ArrayList<Note> out = new ArrayList<>();
-        List<NoteRep> in = super.getAllNoteReps();
+        List<NoteRep> noteIn = song.getAllNoteReps();
+        List<Note> noteOut = new ArrayList<>();
 
-        for (NoteRep n : in) {
-            out.add(new Note())
+        for (NoteRep n : noteIn) {
+            noteOut.add(new Note(n));
         }
-        return out;
+
+        return noteOut;
+    }
+
+    @Override
+    public String display() {
+        return song.getState();
     }
 }
