@@ -1,9 +1,18 @@
 Created ModelAdapter class
 Created Model interface to match otherView
 Declared all methods used by otherView in Model
+ModelAdapter HAS A Generic Song and IMPLEMENTS Model (I think this is correct design?)
+Made getLowestNote and getHighestNote public in GenericSong, also added them to SongRep interface
 
 Changed Note class to OurNote
 Created Note class to match otherView
-Made OurNote non final so we could extend (I don't know why it was in the first place... we wanted it to be non-mutable,
-    I think, but we just have to not give access to anything.  Should still be fine)
 All methods otherView uses on notes are in the Note class now
+Note had to be a class and not an interface because they use a static method from it.
+
+Console controller now takes in a Model and uses a ConsoleViewImpl as a view.
+Run now calls display on the model given
+
+Controller factory changed to take in a Model instead of a SongRep
+
+MidiViewImpl directly changes the model.  This is bad design but it works.
+IMPORTANT NOTE: HAD TO CHANGE THEIR MIDIVIEWIMPL TO USE INSTRUMENT - 1 OR WE GOT OOB EXCEPTIONS IN DF-TTFAF.TXT
